uploading jbosseap 6.4 configuration for websockets

--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
                                         <artifactId>maven-jar-plugin</artifactId>
                                         <version>2.6</version>
                                 </plugin>
+				 <plugin>
+                			<groupId>org.jboss.as.plugins</groupId>
+                			<artifactId>jboss-as-maven-plugin</artifactId>
+                			<version>7.4.Final</version>
+            			</plugin>
                         </plugins>
                 </pluginManagement>
 
